--- a/test-file.Rmd
+++ b/test-file.Rmd
@@ -8,7 +8,7 @@ Every chapter needs to start out with this chunk of code:
 ```{r, include = FALSE}
 ottrpal::set_knitr_image_path()
 ```
-
+mk splng rrorrrs
 ## Learning Objectives
 
 *Every chapter also needs Learning objectives that will look like this:  
