--- a/test-file.Rmd
+++ b/test-file.Rmd
@@ -1,7 +1,7 @@
 
 # A Test Rmd
 
-*If you haven't yet read the getting started Wiki pages; [start there](https://github.com/jhudsl/OTTR_Template/wiki/Getting-started)
+*If you haven't yet read the getting started Wiki pages; [start there](https://github.com/ottrproject/OTTR_Template/wiki/Getting-started)
 
 Every chapter needs to start out with this chunk of code:
 
@@ -22,7 +22,7 @@ This chapter will cover:
 
 For this chapter, we'll need the following packages attached:
 
-*Remember to add [any additional packages you need to your course's own docker image](https://github.com/jhudsl/OTTR_Template/wiki/Using-Docker#starting-a-new-docker-image).
+*Remember to add [any additional packages you need to your course's own docker image](https://github.com/ottrproject/OTTR_Template/wiki/Using-Docker#starting-a-new-docker-image).
 
 ```{r}
 library(magrittr)
@@ -161,7 +161,7 @@ Here is a link to the DaSL Collection: <https://raw.githubusercontent.com/fhdsl/
 
 ## Print out session info
 
-You should print out session info when you have code for [reproducibility purposes](https://jhudatascience.org/Reproducibility_in_Cancer_Informatics/managing-package-versions.html).
+You should print out session info when you have code for [reproducibility purposes](https://ottrproject.org/Reproducibility_in_Cancer_Informatics/managing-package-versions.html).
 
 ```{r}
 devtools::session_info()
