--- a/test-file.Rmd
+++ b/test-file.Rmd
@@ -1,7 +1,7 @@
 
 # A Test Rmd
 
-*If you haven't yet read the getting started pages go to there https://ottrproject.org/index.html*
+*If you haven't yet read the getting started pages go to there https://ottrproject.org/index.html
 
 Every chapter needs to start out with this chunk of code:
 
@@ -90,17 +90,7 @@ OR this works:
 
 ### Links to files
 
-This works:
-
-```{r, fig.align="center", echo=FALSE}
-knitr::include_url("https://www.bgsu.edu/content/dam/BGSU/center-for-faculty-excellence/docs/TLGuides/TLGuide-Learning-Objectives.pdf", height = "800px")
-```
-
-Or this:
-
-[This works](https://www.bgsu.edu/content/dam/BGSU/center-for-faculty-excellence/docs/TLGuides/TLGuide-Learning-Objectives.pdf).
-
-Or this:
+This works nicely:
 
 <iframe src="https://www.bgsu.edu/content/dam/BGSU/center-for-faculty-excellence/docs/TLGuides/TLGuide-Learning-Objectives.pdf" width="672" height="800px"></iframe>
 
